--- a/docs/tutorial-basics/markdown-features.mdx
+++ b/docs/tutorial-basics/markdown-features.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 4
 ---
 
-# Markdown Features
+# Markdown Features 说明
 
 Docusaurus supports **[Markdown](https://daringfireball.net/projects/markdown/syntax)** and a few **additional features**.
 
